Aggiornati i manager del DAO con addCustomFileteres() con correzioni alle query. Tolti controlli sui valori degli argomenti dei metodi. Correzioni minori.